devops/kubernetes/exemple/tests/blue-green-deployments/rollouts-demo/bluegreen-ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-bluegreen
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: blue-green.dev.montpellier.epsi.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-bg-app-preview
            port:
              name: http
