devops/kubernetes/exemple/tests/blue-green-deployments/rollouts-demo/bluegreen-ingress.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-local
  namespace: test
#  annotations:
#    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
#    nginx.ingress.kubernetes.io/app-root: /
spec:
  ingressClassName: nginx
  rules:
  - host: blue-green.kube.montpellier.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo
            port:
              name: http
