devops/kubernetes/exemple/tests/blue-green-deployments/rollouts-demo/bluegreen-service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-ext
  namespace: test
  labels:
    app: bluegreen-demo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    nodePort: 30504
  selector:
    app: bluegreen-demo
